--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>サイトタイトル</title>
+    <title>セピアフィルター</title>
     <meta name="description" content="サイトの概要を記載">
     <link rel="stylesheet" href="style.css">
 </head>
