--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <!-- ポップアップ表示用のコンテナ -->
     <div id="popup-container"
         style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); align-items:center; justify-content:center; z-index:1000;">
-        <div
-            style="position:relative; max-width:80%; max-height:80%; box-shadow:0 4px 8px rgba(0,0,0,0.2); background:#fff; padding:20px; box-sizing:border-box; overflow:auto;">
+        <div style="position:relative; max-width:80%; max-height:80%; box-shadow:0 4px 8px rgba(0,0,0,0.2); background:#fff; padding:20px; box-sizing:border-box; overflow:auto;">
             <img id="popup-image" src=""
                 style="width:auto; max-width:100%; max-height:80vh; display:block; margin:auto;">
             <button id="close-popup" style="position:absolute; top:10px; right:10px;">閉じる</button>
